Added Applied Jobs

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,23 @@
   background-size: cover;
   background-position: center;
 }
+.addBg {
+  background-image: url("../src/assets/addBg.jpg");
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.customDatePickerWidth,
+.customDatePickerWidth > div.react-datepicker-wrapper,
+.customDatePickerWidth
+  > div
+  > div.react-datepicker__input-container
+  .customDatePickerWidth
+  > div
+  > div.react-datepicker__input-container
+  input {
+  width: 100%;
+}
