--- a/src/index.css
+++ b/src/index.css
@@ -30,3 +30,12 @@
   input {
   width: 100%;
 }
+
+.errorPage {
+  background-image: url("../src/assets/pagenotfound.png");
+  background-color: rgba(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
